--- a/KPO.Tests/KPO.Tests.csproj
+++ b/KPO.Tests/KPO.Tests.csproj
@@ -22,6 +22,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\KPO.Example.Application\KPO.Example.Application.csproj" />
+      <ProjectReference Include="..\KPO.Example.Infrastructure\KPO.Example.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
