--- a/KPO.CarPreOrder.Application/KPO.CarPreOrder.Application.csproj
+++ b/KPO.CarPreOrder.Application/KPO.CarPreOrder.Application.csproj
@@ -1,19 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.9" />
+      <Folder Include="Utils\" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\KPO.DDD.Basic\KPO.DDD.Basic.csproj" />
+      <ProjectReference Include="..\KPO.CarPreOrder.Domain\KPO.CarPreOrder.Domain.csproj" />
       <ProjectReference Include="..\KPO.Example.Contracts\KPO.Example.Contracts.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="MediatR" Version="12.5.0" />
     </ItemGroup>
 
 </Project>
