--- a/KPO.Example.MVC/appsettings.json
+++ b/KPO.Example.MVC/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "PostgresConnectionStrings": "Host=localhost;Port=5432;Database=kpo;Username=postgres;Password=password"
 }
