--- a/KPO.Example.Api/appsettings.json
+++ b/KPO.Example.Api/appsettings.json
@@ -6,5 +6,10 @@
     }
   },
   "AllowedHosts": "*",
-  "PostgresConnectionStrings": "Host=localhost;Port=5432;Database=kpo;Username=postgres;Password=password"
+  "PostgresConnectionStrings": "Host=localhost;Port=5432;Database=kpo;Username=postgres;Password=password",
+  "RabbitMq": {
+    "Host": "localhost",
+    "Username": "user",
+    "Password": "password"
+  }
 }
