--- a/KPO.Example.Application/KPO.Example.Application.csproj
+++ b/KPO.Example.Application/KPO.Example.Application.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="MassTransit.Abstractions" Version="8.5.6" />
       <PackageReference Include="MediatR" Version="12.5.0" />
     </ItemGroup>
 
