add outbox example

--- a/KPO.Example.Api/appsettings.json
+++ b/KPO.Example.Api/appsettings.json
@@ -7,9 +7,15 @@
   },
   "AllowedHosts": "*",
   "PostgresConnectionStrings": "Host=localhost;Port=5432;Database=kpo;Username=postgres;Password=password",
+  "CarPreOrderPostgresConnectionStrings": "Host=localhost;Port=5433;Database=kpo;Username=postgres;Password=password",
   "RabbitMq": {
     "Host": "localhost",
     "Username": "user",
     "Password": "password"
+  },
+  "S3": {
+    "Endpoint": "http://localhost:9000",
+    "AccessKey": "accesskey",
+    "SecretKey": "secretkey"
   }
 }
