--- a/KPO.CarPreOrder.Infrastructure/KPO.CarPreOrder.Infrastructure.csproj
+++ b/KPO.CarPreOrder.Infrastructure/KPO.CarPreOrder.Infrastructure.csproj
@@ -18,6 +18,7 @@
 
     <ItemGroup>
       <PackageReference Include="MassTransit.RabbitMQ" Version="8.5.6" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
     </ItemGroup>
 
 </Project>
