--- a/KPO.Example.Infrastructure/KPO.Example.Infrastructure.csproj
+++ b/KPO.Example.Infrastructure/KPO.Example.Infrastructure.csproj
@@ -11,6 +11,8 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="AWSSDK.S3" Version="4.0.14.1" />
+      <PackageReference Include="Hangfire.PostgreSql" Version="1.20.12" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
     </ItemGroup>
 
