--- a/compose.yaml
+++ b/compose.yaml
@@ -48,6 +48,30 @@
       - "5432:5432"
     networks:
       - kpo-network
+  
+  car-pre-order-postgres:
+    image: postgres:15
+    environment:
+      POSTGRES_DB: "kpo"
+      POSTGRES_USER: "postgres"
+      POSTGRES_PASSWORD: "password"
+    ports:
+      - "5433:5432"
+    networks:
+      - kpo-network
+        
+  minio:
+    image: minio/minio
+    container_name: minio
+    ports:
+      - "9000:9000"
+      - "9003:9001"
+    environment:
+      MINIO_ACCESS_KEY: accesskey
+      MINIO_SECRET_KEY: secretkey
+    command: server /data --console-address ":9001"
+    networks:
+      - kpo-network
 
 networks:
   kpo-network:
