add redis cache

--- a/KPO.Example.Api/appsettings.json
+++ b/KPO.Example.Api/appsettings.json
@@ -17,5 +17,9 @@
     "Endpoint": "http://localhost:9000",
     "AccessKey": "accesskey",
     "SecretKey": "secretkey"
+  },
+  "Redis": {
+    "ConnectionString": "localhost:6379",
+    "InstanceName": "kpo_"
   }
 }
