--- a/KPO.Example.Infrastructure/KPO.Example.Infrastructure.csproj
+++ b/KPO.Example.Infrastructure/KPO.Example.Infrastructure.csproj
@@ -13,6 +13,7 @@
     <ItemGroup>
       <PackageReference Include="AWSSDK.S3" Version="4.0.14.1" />
       <PackageReference Include="Hangfire.PostgreSql" Version="1.20.12" />
+      <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="10.0.1" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
     </ItemGroup>
 
