--- a/compose.yaml
+++ b/compose.yaml
@@ -72,6 +72,14 @@
     command: server /data --console-address ":9001"
     networks:
       - kpo-network
+        
+  redis:
+    image: redis:latest
+    container_name: redis
+    ports:
+      - "6379:6379"
+    networks:
+      - kpo-network
 
 networks:
   kpo-network:
